[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Enemy/wasans 복사본.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/rsc/skellllll.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 72, 120 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 504, 0, 72, 120 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 13.0
height = 70.0

[sub_resource type="RectangleShape2D" id=20]

[node name="skelll" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "shoot"
frame = 2
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -48, 19 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -38, -36 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -7, 15 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -67.0
margin_top = -80.0
margin_right = -67.0
margin_bottom = -80.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
